--- a/client/src/main/AndroidManifest.xml
+++ b/client/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App.Main"
-        android:usesCleartextTraffic="true"
+        android:usesCleartextTraffic="false"
         >
 
         <provider
