update build tools version and add app check

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,10 +35,10 @@ android.enableJetifier=true
 # a jdk or jre location, however, depending on what your build does, using a JDK is safer.
 # A reasonable default is derived from your environment (JAVA_HOME or the path to java)
 # if the setting is unspecified. This does not affect the version of Java used to launch Gradle.
-# org.gradle.java.home=C\:\\Program Files\\Java\\jdk1.8.0_181
+org.gradle.java.home=C\:\\Program Files\\Java\\jdk-11.0.11
 # org.gradle.daemon=false
 
 # log level (quiet,warn,lifecycle,info,debug)
 org.gradle.logging.level=debug
 
-android.enableR8.fullMode=true
+android.enableR8.fullMode=false
