--- a/gradle.properties
+++ b/gradle.properties
@@ -35,7 +35,7 @@ android.enableJetifier=true
 # a jdk or jre location, however, depending on what your build does, using a JDK is safer.
 # A reasonable default is derived from your environment (JAVA_HOME or the path to java)
 # if the setting is unspecified. This does not affect the version of Java used to launch Gradle.
-org.gradle.java.home=C\:\\Program Files\\Java\\jdk-11.0.11
+# org.gradle.java.home=C\:\\Program Files\\Java\\jdk-11.0.11
 # org.gradle.daemon=false
 
 # log level (quiet,warn,lifecycle,info,debug)
