--- a/local.properties
+++ b/local.properties
@@ -14,6 +14,7 @@
 #</ANNOTATIONS>=
 #<library=name\="Gradle\: androidx.camera\:camera-camera2\:1.1.0-alpha05@aar">
 sdk.dir=C\:\\Users\\joseph\\AppData\\Local\\Android\\sdk-4-2-2
+API_KEY=AIzaSyDXQCVYJtfnhIPXwfRkHzrlOaYtdqqgT8g
 #</library>=
 #</CLASSES>=
 #</SOURCES>=
