--- a/admin/src/main/AndroidManifest.xml
+++ b/admin/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App.Main"
-        android:usesCleartextTraffic="false"
+        android:usesCleartextTraffic="@bool/is_development_stage"
         >
 
         <provider
