--- a/local.properties
+++ b/local.properties
@@ -4,18 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 19 18:09:12 WAT 2021
-#<ANNOTATIONS>=
-#</component>=
-#<CLASSES>=
-#<JAVADOC=/>
-#<component=name\="libraryTable">
-#<SOURCES>=
-#</ANNOTATIONS>=
-#<library=name\="Gradle\: androidx.camera\:camera-camera2\:1.1.0-alpha05@aar">
-sdk.dir=C\:\\Users\\joseph\\AppData\\Local\\Android\\sdk-4-2-2
+#Mon Apr 11 05:10:09 BST 2022
+sdk.dir=C\:\\Users\\Joseph\\AppData\\Local\\Android\\Sdk
 API_KEY=AIzaSyDXQCVYJtfnhIPXwfRkHzrlOaYtdqqgT8g
-#</library>=
-#</CLASSES>=
-#</SOURCES>=
-#<root=url\="jar\://$USER_HOME$/.gradle/caches/modules-2/files-2.1/androidx.camera/camera-camera2/1.1.0-alpha05/82a6af45a27e38b2c28e280a2189ca6fa67a883d/camera-camera2-1.1.0-alpha05-sources.jar\!/" />
