update sdk path

--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 11 05:10:09 BST 2022
-sdk.dir=C\:\\Users\\Joseph\\AppData\\Local\\Android\\Sdk
+#Sun Aug 25 18:51:24 WAT 2024
 API_KEY=AIzaSyDXQCVYJtfnhIPXwfRkHzrlOaYtdqqgT8g
+sdk.dir=C\:\\main\\standalone\\android-sdk
